6524-fix overflow for IE

--- a/src/components/Carousel/Carousel.less
+++ b/src/components/Carousel/Carousel.less
@@ -142,7 +142,7 @@
 
 @{b}@{b}_theme_showcase {
     padding: 0 0 37px;
-    overflow: unset;
+    overflow: inherit;
     margin: 0 auto;
     @{s} {
         &-list {
@@ -291,7 +291,7 @@
 
 @{b}@{b}_theme_landing {
     padding: 0 0 40px;
-    overflow: unset;
+    overflow: inherit;
     margin: 0 auto;
     @media @mobileSM {
         padding: 0 0 32px;
